community/lists/devel/att-17246/attachment
<div dir="ltr">HI Folks,<div><br></div><div>I&#39;m seeing build failures on both carver/pgi at nersc and on a cray internal machine</div><div>with the nightly build of master.</div><div><br></div><div>From the cray box:</div><div><br></div><div><pre style="color:rgb(0,0,0)">ommon_ugni.c:30:5: error: &#39;MCA_BASE_VERSION_2_0_0&#39; undeclared here (not in a function)
     MCA_BASE_VERSION_2_0_0,
common_ugni.c:31:5: warning: initialization makes integer from pointer without a cast [enabled by
default]
     &quot;common&quot;,
     ^
common_ugni.c:31:5: warning: (near initialization for
&#39;opal_common_ugni_component.mca_minor_version&#39;) [enabled by default]
common_ugni.c:31:5: error: initializer element is not computable at load time
common_ugni.c:35:5: warning: initialization makes integer from pointer without a cast [enabled by
default]
     NULL,
common_ugni.c:35:5: warning: (near initialization for
&#39;opal_common_ugni_component.mca_project_minor_version&#39;) [enabled by default]
common_ugni.c:37:1: warning: initialization makes integer from pointer without a cast [enabled by
default]
)
 ^
make[2]: *** [common_ugni.lo] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [all-recursive] Error 1
make: *** [all-recursive] Error 1</pre><pre style="color:rgb(0,0,0)"><br></pre><pre style="color:rgb(0,0,0)">from the ibm dataplex box:</pre><pre style="color:rgb(0,0,0)"><pre>./../config/depcomp: line 427: atomic-asm.d: No such file or directory
../../config/depcomp: line 430: atomic-asm.d: No such file or directory
pgcc-Fatal-/global/common/carver/usg/pgi/14.4/linux86-64/14.4/bin/pgc TERMINATED by signal 11
Arguments to /global/common/carver/usg/pgi/14.4/linux86-64/14.4/bin/pgc
 -inform warn -x 119 0xa10000 -x 122 0x40 -x 123 0x1000 -x 127 4 -x 127 17 -x 19 0x400000 -x 28
0x40000 -x 120 0x10000000 -x 70 0x8000 -x 122 1 -x 125 0x20000 -x 117 0x1000 -quad -x 59 4 -tp
nehalem -astype 0 -stdinc
/global/common/carver/usg/pgi/14.4/linux86-64/14.4/include-gcc41:/global/common/carver/usg/pgi/14.4/linux86-64/14.4/include:/usr/local/include:/usr/lib/gcc/x86_64-redhat-linux/4.1.2/include:/usr/include
-def unix -def __unix -def __unix__ -def linux -def __linux -def __linux__ -def __NO_MATH_INLINES
-def __x86_64 -def __x86_64__ -def __LONG_MAX__=9223372036854775807L -def &#39;__SIZE_TYPE__=unsigned
long int&#39; -def &#39;__PTRDIFF_TYPE__=long int&#39; -def __THROW= -def __extension__= -def __amd_64__amd64__
-def __k8 -def __k8__ -def __SSE__ -def __MMX__ -def __SSE2__ -def __SSE3__ -def __SSSE3__
-predicate &#39;#machine(x86_64) #lint(off) #system(posix) #cpu(x86_64)&#39; -idir . -idir
../../../../opal/include -idir ../../../../ompi/include -idir ../../../../oshmem/include -idir
../../../../opal/mca/common/libfabric/libfabric -idir
../../../../opal/mca/hwloc/hwloc191/hwloc/include/private/autogen -idir
../../../../opal/mca/hwloc/hwloc191/hwloc/include/hwloc/autogen -idir ./libevent -idir
./libevent/include -idir ./libevent/include -idir ./libevent/compat -idir ../../../.. -idir
../../../../orte/include -idir
/global/u2/h/hpp/mtt_carver_tmp/mpi-install/8_8A/src/openmpi-dev-1527-g97444d8/opal/mca/hwloc/hwloc191/hwloc/include
-idir
/global/u2/h/hpp/mtt_carver_tmp/mpi-install/8_8A/src/openmpi-dev-1527-g97444d8/opal/mca/event/libevent2022/libevent
-idir
/global/u2/h/hpp/mtt_carver_tmp/mpi-install/8_8A/src/openmpi-dev-1527-g97444d8/opal/mca/event/libevent2022/libevent/include
-def HAVE_CONFIG_H -def __PIC__ -def PIC -cmdline &#39;+pgcc libevent2022_component.c -DHAVE_CONFIG_H
-I. -I../../../../opal/include -I../../../../ompi/include -I../../../../oshmem/include
-I../../../../opal/mca/common/libfabric/libfabric
-I../../../../opal/mca/hwloc/hwloc191/hwloc/include/private/autogen
-I../../../../opal/mca/hwloc/hwloc191/hwloc/include/hwloc/autogen -I./libevent -I./libevent/include
-I./libevent/include -I./libevent/compat -I../../../.. -I../../../../orte/include
-I/global/u2/h/hpp/mtt_carver_tmp/mpi-install/8_8A/src/openmpi-dev-1527-g97444d8/opal/mca/hwloc/hwloc191/hwloc/include
-I/global/u2/h/hpp/mtt_carver_tmp/mpi-install/8_8A/src/openmpi-dev-1527-g97444d8/opal/mca/event/libevent2022/libevent
-I/global/u2/h/hpp/mtt_carver_tmp/mpi-install/8_8A/src/openmpi-dev-1527-g97444d8/opal/mca/event/libevent2022/libevent/include
-g -c -MD -fpic -DPIC -o .libs/libevent2022_component.o&#39; -outfile .libs/libevent2022_component.o -x
123 0x80000000 -x 123 4 -x 2 0x400 -x 119 0x20 -def __pgnu_vsn=40102 -alwaysinline
/global/common/carver/usg/pgi/14.4/linux86-64/14.4/lib/<a href="http://libintrinsics.il">libintrinsics.il</a> 4 -x 123 8 -x 120 0x200000
-x 70 0x40000000 -x 163 0x800000 -y 189 0x4000000 -x 62 8 -asm
/global/scratch2/sd/hpp/pgccFq0dD9_z_POK.s
make[3]: *** [libevent2022_component.lo] Error 1
make[2]: *** [all-recursive] Error 1
make[1]: *** [all-recursive] Error 1
make: *** [all-recursive] Error 1</pre></pre><pre style="color:rgb(0,0,0)"><br></pre></div></div>

